--- a/test.ipynb
+++ b/test.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,148 +333,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.chains import ConversationChain\n",
+    "from llama_index.core.indices.postprocessor import SentenceTransformerRerank\n",
+    "reranker = SentenceTransformerRerank(model=\"cross-encoder/ms-marco-MiniLM-L-2-v2\", top_n=5)\n",
+    "reranked_nodes = reranker.postprocess_nodes(nodes=nodes, query_str=\"What powers does the prime minister have\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_context = \"\\n\".join(node.text for node in reranked_nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain.chains.conversation.memory import ConversationBufferMemory\n",
     "from langchain_openai import ChatOpenAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpenAI(\n",
+    "rewriting_llm = ChatOpenAI(\n",
+    "\ttemperature=0,\n",
+    "\tmodel_name=\"gpt-3.5-turbo\"\n",
+    ")\n",
+    "\n",
+    "final_llm = ChatOpenAI(\n",
     "\ttemperature=0,\n",
     "\tmodel_name=\"gpt-3.5-turbo\"\n",
     ")\n",
     "\n",
     "# Initialize memory\n",
-    "memory = ConversationBufferMemory()\n",
-    "conversation = ConversationChain(llm=llm, memory=memory)\n"
+    "memory = ConversationBufferMemory()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'Hi there my friend',\n",
-       " 'history': '',\n",
-       " 'response': 'Hello! How are you today?'}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conversation.invoke(\"Hi there my friend\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'Good',\n",
-       " 'history': 'Human: Hi there my friend\\nAI: Hello! How are you today?',\n",
-       " 'response': \"That's great to hear! Is there anything specific you'd like to talk about or ask me today?\"}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conversation.invoke()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"That's okay! I'm here to chat about anything you'd like. If you change your mind or have any questions, feel free to ask.\""
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conversation.predict(input=\"No\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Human: Hi there my friend\\nAI: Hello! How are you today?\\nHuman: Good\\nAI: That's great to hear! Is there anything specific you'd like to talk about or ask me today?\\nHuman: No\\nAI: That's okay! I'm here to chat about anything you'd like. If you change your mind or have any questions, feel free to ask.\""
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "memory.buffer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "prompt = ChatPromptTemplate.from_template(\"\"\"Answer the question below using the context:\n",
+    "#Set Initial Prompt\n",
+    "rewriting_prompt_str = \"\"\"\n",
+    "[INST] \n",
+    "Given the Chat History and Question, rephrase the question so it can be a standalone question.  I will give some examples.\n",
     "\n",
-    "Context: {context}\n",
+    "```\n",
+    "Example 1: If no chat history is present, then just return the original question\n",
+    "Chat History: \n",
+    "Question: What is the power of the prime minister?\n",
+    "Your response: What is the power of the prime minister?\n",
+    "Note: You are returning  \"What is the power of the prime minister?\", not \"Rephrased Question:  What is the power of the prime minister?\"\n",
+    "```\n",
     "\n",
+    "```\n",
+    "Example 2: \n",
+    "Chat History: \n",
+    "Human: What is the power of the prime minister?\n",
+    "AI: The prime minister has many powers\n",
+    "Question: What else can he do?\n",
+    "Your response: What else can the prime minister do? \n",
+    "Note: You are returning What else can the prime minister do?, not Rephrased Question: What else can the prime minister do?\n",
+    "```\n",
+    "\n",
+    "With those examples, here are the actual chat history and input questions:\n",
+    "Chat History: {chat_history}\n",
     "Question: {question}\n",
-    "\n",
-    "Answer: \"\"\")"
+    "[/INST] \n",
+    "\"\"\"\n",
+    "rewriting_prompt = ChatPromptTemplate.from_template(rewriting_prompt_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "response = rewriting_llm.invoke(rewriting_prompt.invoke({\"chat_history\":\"Human: Who is Chris? \\nAI: Your mom\", \"question\":\"What does he do?\"}).to_string()).content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set final prompt\n",
+    "final_prompt_str = \"\"\"\n",
+    "[INST] \n",
+    "Given the following chat history and context, answer the following question.\n",
+    "\n",
+    "Context: {context}\n",
+    "Chat History: {chat_history}\n",
+    "Question: {question}\n",
+    "[/INST] \n",
+    "\"\"\"\n",
+    "final_prompt = ChatPromptTemplate.from_template(final_prompt_str)\n",
+    "\n",
+    "\n",
+    "# Update history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatPromptValue(messages=[HumanMessage(content='Answer the question below using the context:\\n\\nContext: hello\\n\\nQuestion: HELLO\\n\\nAnswer: ')])"
+       "AIMessage(content='The Prime Minister of Australia has the power to lead the government, make decisions on behalf of the government, represent Australia internationally, and appoint and dismiss government ministers. The Prime Minister is also responsible for setting government policy, managing the cabinet, and overseeing the administration of government departments.', response_metadata={'token_usage': {'completion_tokens': 55, 'prompt_tokens': 3563, 'total_tokens': 3618}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-8a4d73f4-9511-4937-af80-79239cd056c0-0', usage_metadata={'input_tokens': 3563, 'output_tokens': 55, 'total_tokens': 3618})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "final_llm.invoke(final_prompt.invoke({\"context\":combined_context, \"chat_history\":memory.chat_memory.__str__(), \"question\":\"What are his powers?\"}).to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory.save_context({\"HumanMessage\":\"Who is the prime minister\"},{\"AIMessage\":\"Yeah\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Human: Who is the prime minister\\nAI: Yeah'"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory.chat_memory.__str__()"
+   ]
   }
  ],
  "metadata": {
